# Pipeline_blender

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Klassen.docx  Objekt.docx  Pipeline.docx  README.md
Core/: Benuter.hpp  Benutzer.cpp  Benutzer.hpp  CmakeLists.txt  Core.sln
Core/Core/: Benutzer.h  Core.cpp  Core.vcxproj  Core.vcxproj.filters  Kommentar.cpp  Kommentar.h  stdafx.cpp
Planung/: Einführung in das Projekt Pipeline.docx  Objekt.docx  Ziele.docx
Planung/Interface/: Grobe Fenster Idee.docx
Planung/Programm Aufbau/: Runtime Database.xml
cmake/: QT_helper.cmake
source/: CMakeLists.txt
source/Core/: CmakeLists.txt  CoreConfig.cmake.in
source/Core/include/: Benutzer.hpp  DataObject.h  DataTyp.h  MainData.h  apiClass.h  include_python.h  includes.h  pipeline_utilis.h  utilis.h
source/Core/src/: Benutzer.cpp  DataObject.cpp  DataTyp.cpp  MainData.cpp  apiClass.cpp  pipeline_utilis.cpp
source/Main_App/: CMakeLists.txt
source/Main_App/Interface/: mainwindow.ui
source/Python_Scripts/: Allgemeines_Script.py  Pc_Cache.json  Scene.py  Shoot.py
source/test_app/: CMakeLists.txt  test_app.cpp
